--- a/v1.5/about.css
+++ b/v1.5/about.css
@@ -20,7 +20,6 @@ h2 {
   font-weight: bold;
 }
 
-
 h4 {
   padding-top: 20px;
   padding-left: 50px;
@@ -69,7 +68,6 @@ p {
   height: 30vh;
   margin-left: 55px;
   margin-right: 55px;
-
 }
 
 #aboutpic3 {
@@ -88,7 +86,6 @@ figcaption {
   font-size: 8px;
 }
 
-
 @media (min-width: 576px) {
   h2 {
     text-align: center;
@@ -96,24 +93,19 @@ figcaption {
     padding-bottom: 10px;
     font-weight: bold;
   }
-
-
   h4 {
     padding-top: 20px;
     padding-left: 60px;
     padding-bottom: 15px;
     font-weight: 600;
   }
-
   h6 {
     text-align: center;
   }
-
   #values {
     text-align: right;
     padding-right: 60px;
   }
-
   .column1 {
     text-align: justify;
     text-justify: inter-word;
@@ -122,38 +114,32 @@ figcaption {
     text-align: justify;
     text-justify: inter-word;
   }
-
   .row:after {
     display: table;
     clear: both;
   }
-
   p {
     padding-left: 60px;
     padding-right: 60px;
   }
-
   #aboutpic1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     height: 30vh;
   }
-
   #aboutpic2 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     height: 30vh;
   }
-
   #aboutpic3 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     height: 30vh;
   }
-
   figcaption {
     padding: 2px;
     text-align: center;
@@ -170,24 +156,19 @@ figcaption {
     padding-bottom: 5px;
     font-weight: bold;
   }
-
-
   h4 {
     padding-top: 20px;
     padding-left: 60px;
     padding-bottom: 5px;
     font-weight: 600;
   }
-
   h6 {
     text-align: center;
   }
-
   #values {
     text-align: right;
     padding-right: 60px;
   }
-
   .column1 {
     text-align: justify;
     text-justify: inter-word;
@@ -196,17 +177,14 @@ figcaption {
     text-align: justify;
     text-justify: inter-word;
   }
-
   .row:after {
     display: table;
     clear: both;
   }
-
   p {
     padding-left: 40px;
     padding-right: 40px;
   }
-
   #aboutpic1 {
     display: block;
     margin-left: auto;
@@ -215,7 +193,6 @@ figcaption {
     margin-left: 150px;
     margin-right: 150px;
   }
-
   #aboutpic2 {
     display: block;
     margin-left: auto;
@@ -224,7 +201,6 @@ figcaption {
     margin-left: 150px;
     margin-right: 150px;
   }
-
   #aboutpic3 {
     display: block;
     margin-left: auto;
@@ -233,7 +209,6 @@ figcaption {
     margin-left: 150px;
     margin-right: 150px;
   }
-
   figcaption {
     padding: 2px;
     text-align: center;
@@ -244,8 +219,6 @@ figcaption {
   }
 }
 
-
-
 @media (min-width: 992px) {
   h2 {
     text-align: center;
@@ -253,50 +226,39 @@ figcaption {
     padding-bottom: 10px;
     font-weight: bold;
   }
-
-
   h4 {
     padding-top: 20px;
     padding-left: 60px;
     padding-bottom: 15px;
     font-weight: 600;
   }
-
   h6 {
     text-align: center;
   }
-
   #values {
     text-align: right;
     padding-right: 60px;
   }
-
   .column1 {
     float: left;
     width: 50%;
-
     text-align: justify;
     text-justify: inter-word;
   }
-
   .column2 {
     float: left;
     width: 50%;
-
     text-align: justify;
     text-justify: inter-word;
   }
-
   .row:after {
     display: table;
     clear: both;
   }
-
   p {
     padding-left: 60px;
     padding-right: 60px;
   }
-
   #aboutpic1 {
     display: block;
     margin-top: 25px;
@@ -304,7 +266,6 @@ figcaption {
     margin-right: auto;
     height: 60vh;
   }
-
   #aboutpic2 {
     margin-top: 10px;
     display: block;
@@ -312,14 +273,12 @@ figcaption {
     margin-right: auto;
     height: 60vh;
   }
-
   #aboutpic3 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     height: 60vh;
   }
-
   figcaption {
     padding: 2px;
     text-align: center;
@@ -329,3 +288,4 @@ figcaption {
     font-size: 15px;
   }
 }
+/*# sourceMappingURL=about.css.map */
