--- a/assets/css/membersv15.css
+++ b/assets/css/membersv15.css
@@ -5,8 +5,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   min-height: 100vh;
   margin: 0;
 }
@@ -14,8 +14,8 @@ body {
 .header {
   color: white;
   text-align: center;
-  font-size: medium;
   font-style: italic;
+  margin-bottom: 10vh;
 }
 
 h1 {
@@ -39,6 +39,41 @@ h2 {
   color: white;
   text-align: center;
   font-size: 25;
-  font-style: bold;
+  font-weight: bold;
+  margin-bottom: 7vh;
+}
+
+.dot {
+  height: 14vw;
+  width: 14vw;
+  background-color: white;
+  border: 4px solid blue;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.container {
+  text-align: center;
+  margin-bottom: 7vh;
+}
+
+p {
+  font-size: 11px;
+  margin-bottom: 0;
+  color: white;
+  font-style: italic;
+}
+
+.name {
+  font-weight: bold;
+  font-style: normal;
+}
+
+.col {
+  padding: 0 0 0 0;
+}
+
+.header > p {
+  font-size: medium;
 }
 /*# sourceMappingURL=membersv15.css.map */
