--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -1,33 +1,73 @@
 body {
-    background-color: rgb(162, 185, 202);
+    background-color: #a2b9ca;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     min-height: 100vh;
-    margin:0;
-}
-.header{
+    margin: 0;
+  }
+  
+  .header {
     color: white;
     text-align: center;
-    font-size: medium;
     font-style: italic;
-}
-h1 {
+    margin-bottom: 10vh;
+  }
+  
+  h1 {
     font-size: 40px;
     font-weight: bold;
-}
-footer{
-    background-color: rgb(32, 32, 32);
+  }
+  
+  footer {
+    background-color: #202020;
     color: white;
     padding: 20px;
     text-align: center;
     margin-top: auto;
-}
-a {
+  }
+  
+  a {
     color: white;
-}
-h2 {
+  }
+  
+  h2 {
     color: white;
     text-align: center;
     font-size: 25;
-    font-style: bold;
-}
+    font-weight: bold;
+    margin-bottom: 7vh;
+  }
+  
+  .dot {
+    height: 14vw;
+    width: 14vw;
+    background-color: white;
+    border: 4px solid blue;
+    border-radius: 50%;
+    display: inline-block;
+  }
+  .container {
+    text-align: center;
+    margin-bottom: 7vh;
+  }
+  p {
+    font-size: 11px;
+    margin-bottom: 0;
+    color: white;
+    font-style: italic;
+  }
+  .name {
+    font-weight: bold;
+    font-style: normal;
+  }
+  .col{
+      padding: 0 0 0 0;
+  }
+  .header > p {
+      font-size: medium;
+  }
