--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -1,83 +1,158 @@
+//COLOR SET
+$red: #E06B65;
+$yellow: #FFEE52;
+$green:#99CC99;
+$blue: #99CCFF;
+$red2: #E06B65;
+$yellow2: #FFEE52;
+$green2:#99CC99;
+$blue2: #99CCFF;
+$gray: #787878;
+$black: #202020;
 body {
     background-color: #a2b9ca;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
-  }
-  
-  .header {
+}
+.navbar.scrolled {
+    background-color: #202020 !important;
+    transition: background-color 200ms linear;
+    color: white;
+}
+.header {
     color: white;
     text-align: center;
     font-style: italic;
     margin-bottom: 10vh;
-  }
+}
   
-  h1 {
+h1 {
     font-size: 40px;
     font-weight: bold;
-  }
+}
   
-  footer {
+footer {
     background-color: #202020;
     color: white;
     padding: 20px;
     text-align: center;
     margin-top: auto;
-  }
-  
-  a {
-    color: white;
-  }
-  
-  h2 {
+}
+
+h2 {
     color: white;
     text-align: center;
     font-style: normal;
     font-size: 25;
     font-weight: bold;
     margin-bottom: 7vh;
-  }
+}
   
-  .dot {
+.dot {
     height: 12.5vw;
     width: 12.5vw;
     background-color: white;
-    border: 4px solid blue;
     border-radius: 50%;
     display: inline-block;
-  }
-  .team > .container, .exec> .container{
+    position: relative;
+    text-align: center;
+}
+.quote {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: x-small;
+    font-weight: medium;
+    color: $black;
+}
+
+.team > .container, .exec> .container{
     text-align: center;
     margin-bottom: 7vh;
-  }
-  p {
+}
+
+p {
     font-size: 11px;
     margin-bottom: 0;
     color: white;
     font-style: italic;
-  }
-  .name {
+}
+
+.name {
     font-weight: bold;
     font-style: normal;
-  }
-  .col{
+}
+
+.col{
       padding: 0 0 0 0;
-  }
-  .header > p {
+}
+
+.header > p {
       font-size: medium;
-  }
-  .span {
-    display: table;
-    vertical-align: middle;
-  }
-  .member {
-    max-width: 96%;
-    max-height: 96%;
+}
+  
+.member {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 50%;
-  }
+    height: 94%;
+    width: 94%;
+}
+
+.green {
+    border: 4px solid $green;
+}
+
+.red {
+    border: 4px solid $red;
+}
+
+.blue {
+    border: 4px solid $blue;
+}
+
+.yellow {
+    border: 4px solid $yellow;
+}
+a {
+    color: white;
+}
+a:hover {
+    scrollbar-highlight-color: #202020;
+}
+.nav-link {
+    color: white;
+}
+.black {
+    color: black;
+}
+.img-container {
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+.dot.red:hover {
+    background-color: $red2;
+    border-color: $red;
+    transition-timing-function: ease-in-out;
+}
+.dot.green:hover {
+    background-color: $green2;
+    border-color: $green;
+    transition-timing-function: ease-in-out;
+}
+.dot.blue:hover {
+    background-color: $blue2;
+    border-color: $blue;
+    transition-timing-function: ease-in-out;
+}
+.dot.yellow:hover {
+    background-color: $yellow2;
+    border-color: $yellow;
+    transition-timing-function: ease-in-out;
+}
+.img-container:hover {
+    opacity: 0.2;
+}
