added proj thumbnails, background, tags

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -718,9 +718,8 @@ footer {
   }
 
   .project-tile:hover {
-    opacity: .1;
+    opacity: .1%;
   }
-
 
   .grid-container {
     display: -ms-grid;
