--- a/assets/css/stylesv15.css
+++ b/assets/css/stylesv15.css
@@ -659,6 +659,16 @@ footer {
   opacity: .1;
 }
 
+.project-tile {
+  border-radius: 4%;
+}
+
+.mark {
+  background-color: green;
+  color: black;
+  border-radius: 40%;
+}
+
 .grid-container {
   display: -ms-grid;
   display: grid;
