--- a/assets/css/stylesv15.scss
+++ b/assets/css/stylesv15.scss
@@ -721,6 +721,15 @@ footer {
     opacity: .1;
   }
 
+  .project-tile {
+      border-radius: 4%;
+  }
+
+  .mark {
+    background-color: green;
+    color: black;
+    border-radius: 40%
+  }
 
   .grid-container {
     display: -ms-grid;
