navbar across all pages

--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -1,3 +1,11 @@
+//COLOR SET
+$red: #E06B65;
+$yellow: #FFEE52;
+$green:#99CC99;
+$blue: #99CCFF;
+$gray: #787878;
+$black: #202020;
+
 * {
   margin: 0px;
   padding: 0px;
@@ -19,6 +27,7 @@ h2 {
   padding-bottom: 10px;
   font-weight: bold;
 }
+
 
 h4 {
   padding-top: 20px;
@@ -68,6 +77,7 @@ p {
   height: 30vh;
   margin-left: 55px;
   margin-right: 55px;
+
 }
 
 #aboutpic3 {
@@ -86,6 +96,32 @@ figcaption {
   font-size: 8px;
 }
 
+.navbar-light .navbar-nav .nav-link {
+  padding-left: 0;
+  margin-left: 0.5em;
+  padding-right: 0;
+  margin-right: 0.5em;
+  padding-bottom: 0.1em;
+  margin-bottom: 0.4em;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: $gray;
+  border-color: $gray;
+}
+
+a.about {
+  border-bottom: solid $green;
+}
+
+a.members {
+  border-bottom: solid $blue;
+}
+
+a.projects {
+  border-bottom: solid $red;
+}
+
 @media (min-width: 576px) {
   h2 {
     text-align: center;
@@ -93,19 +129,24 @@ figcaption {
     padding-bottom: 10px;
     font-weight: bold;
   }
+
+
   h4 {
     padding-top: 20px;
     padding-left: 60px;
     padding-bottom: 15px;
     font-weight: 600;
   }
+
   h6 {
     text-align: center;
   }
+
   #values {
     text-align: right;
     padding-right: 60px;
   }
+
   .column1 {
     text-align: justify;
     text-justify: inter-word;
@@ -114,32 +155,38 @@ figcaption {
     text-align: justify;
     text-justify: inter-word;
   }
+
   .row:after {
     display: table;
     clear: both;
   }
+
   p {
     padding-left: 60px;
     padding-right: 60px;
   }
+
   #aboutpic1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     height: 30vh;
   }
+
   #aboutpic2 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     height: 30vh;
   }
+
   #aboutpic3 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     height: 30vh;
   }
+
   figcaption {
     padding: 2px;
     text-align: center;
@@ -156,19 +203,24 @@ figcaption {
     padding-bottom: 5px;
     font-weight: bold;
   }
+
+
   h4 {
     padding-top: 20px;
     padding-left: 60px;
     padding-bottom: 5px;
     font-weight: 600;
   }
+
   h6 {
     text-align: center;
   }
+
   #values {
     text-align: right;
     padding-right: 60px;
   }
+
   .column1 {
     text-align: justify;
     text-justify: inter-word;
@@ -177,14 +229,17 @@ figcaption {
     text-align: justify;
     text-justify: inter-word;
   }
+
   .row:after {
     display: table;
     clear: both;
   }
+
   p {
     padding-left: 40px;
     padding-right: 40px;
   }
+
   #aboutpic1 {
     display: block;
     margin-left: auto;
@@ -193,6 +248,7 @@ figcaption {
     margin-left: 150px;
     margin-right: 150px;
   }
+
   #aboutpic2 {
     display: block;
     margin-left: auto;
@@ -201,6 +257,7 @@ figcaption {
     margin-left: 150px;
     margin-right: 150px;
   }
+
   #aboutpic3 {
     display: block;
     margin-left: auto;
@@ -209,6 +266,7 @@ figcaption {
     margin-left: 150px;
     margin-right: 150px;
   }
+
   figcaption {
     padding: 2px;
     text-align: center;
@@ -219,6 +277,8 @@ figcaption {
   }
 }
 
+
+
 @media (min-width: 992px) {
   h2 {
     text-align: center;
@@ -226,39 +286,50 @@ figcaption {
     padding-bottom: 10px;
     font-weight: bold;
   }
+
+
   h4 {
     padding-top: 20px;
     padding-left: 60px;
     padding-bottom: 15px;
     font-weight: 600;
   }
+
   h6 {
     text-align: center;
   }
+
   #values {
     text-align: right;
     padding-right: 60px;
   }
+
   .column1 {
     float: left;
     width: 50%;
+
     text-align: justify;
     text-justify: inter-word;
   }
+
   .column2 {
     float: left;
     width: 50%;
+
     text-align: justify;
     text-justify: inter-word;
   }
+
   .row:after {
     display: table;
     clear: both;
   }
+
   p {
     padding-left: 60px;
     padding-right: 60px;
   }
+
   #aboutpic1 {
     display: block;
     margin-top: 25px;
@@ -266,6 +337,7 @@ figcaption {
     margin-right: auto;
     height: 60vh;
   }
+
   #aboutpic2 {
     margin-top: 10px;
     display: block;
@@ -273,12 +345,14 @@ figcaption {
     margin-right: auto;
     height: 60vh;
   }
+
   #aboutpic3 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     height: 60vh;
   }
+
   figcaption {
     padding: 2px;
     text-align: center;
@@ -288,4 +362,3 @@ figcaption {
     font-size: 15px;
   }
 }
-/*# sourceMappingURL=about.css.map */
