--- a/assets/css/membersv15.css
+++ b/assets/css/membersv15.css
@@ -130,23 +130,16 @@ a.projects {
 .navbar-light .navbar-nav .nav-link {
   color: white;
   padding-left: 0;
-  margin-left: 8px;
+  margin-left: 0.5em;
   padding-right: 0;
-  margin-right: 8px;
-  padding-bottom: 2px;
-  margin-bottom: 6px;
+  margin-right: 0.5em;
+  padding-bottom: 0.1em;
+  margin-bottom: 0.4em;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
   color: #787878;
   border-color: #787878;
-}
-
-.nav-link:hover {
-  text-decoration: none;
-  color: #787878;
-  -webkit-transition-timing-function: ease-in;
-          transition-timing-function: ease-in;
 }
 
 .black {
