--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -132,22 +132,16 @@ a.projects {
 .navbar-light .navbar-nav .nav-link {
     color: white;
     padding-left: 0;
-    margin-left: 8px;
+    margin-left: 0.5em;
     padding-right: 0;
-    margin-right: 8px;
-    padding-bottom: 2px;
-    margin-bottom: 6px;
+    margin-right: 0.5em;
+    padding-bottom: 0.1em;
+    margin-bottom: 0.4em;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
     color: $gray;
     border-color: $gray;
-}
-
-.nav-link:hover {
-    text-decoration: none;
-    color: $gray;
-    transition-timing-function: ease-in;
 }
 
 .black {
