--- a/assets/css/projectsv15.scss
+++ b/assets/css/projectsv15.scss
@@ -155,7 +155,31 @@ h3 {
     font-size: 0.85rem;
     text-align: center;
   }
-  
+.navbar-light .navbar-nav .nav-link {
+  padding-left: 0;
+  margin-left: 0.5em;
+  padding-right: 0;
+  margin-right: 0.5em;
+  padding-bottom: 0.1em;
+  margin-bottom: 0.4em;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: $gray;
+  border-color: $gray;
+}
+
+a.about {
+  border-bottom: solid $green;
+}
+
+a.members {
+  border-bottom: solid $blue;
+}
+
+a.projects {
+  border-bottom: solid $red;
+}
   
   @media (min-width: 576px) {
     #teaminfo {
