--- a/assets/css/membersv15.css
+++ b/assets/css/membersv15.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #a2b9ca;
+  background-image: url("../img/members/members1.png");
+  background-size: contain;
 }
 
 .navbar.scrolled {
@@ -9,6 +10,13 @@ body {
   color: white;
 }
 
+p {
+  font-size: 11px;
+  margin-bottom: 0;
+  color: white;
+  font-style: italic;
+}
+
 .header {
   color: white;
   text-align: center;
@@ -16,9 +24,14 @@ body {
   margin-bottom: 10vh;
 }
 
+p.header {
+  font-weight: normal;
+}
+
 h1 {
   font-size: 40px;
   font-weight: bold;
+  font-style: normal;
 }
 
 footer {
@@ -62,13 +75,6 @@ h2 {
 .team > .container, .exec > .container {
   text-align: center;
   margin-bottom: 7vh;
-}
-
-p {
-  font-size: 11px;
-  margin-bottom: 0;
-  color: white;
-  font-style: italic;
 }
 
 .name {
@@ -140,10 +146,6 @@ a.projects {
 .navbar-light .navbar-nav .nav-link:hover {
   color: #787878;
   border-color: #787878;
-}
-
-.black {
-  color: black;
 }
 
 .img-container {
