--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -6,23 +6,40 @@ $blue: #99CCFF;
 $gray: #787878;
 $black: #202020;
 body {
-    background-color: #a2b9ca;
+    background-image: url("../img/members/members1.png");
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
 }
 .navbar.scrolled {
     background-color: #202020 !important;
     transition: background-color 200ms linear;
     color: white;
 }
+
+p {
+    font-size: 11px;
+    margin-bottom: 0;
+    color: white;
+    font-style: italic;
+}
+
 .header {
     color: white;
     text-align: center;
     font-style: italic;
     margin-bottom: 10vh;
 }
+
+p.header {
+    font-weight: normal;
+}
   
 h1 {
     font-size: 40px;
     font-weight: bold;
+    font-style: normal;
 }
   
 footer {
@@ -64,13 +81,6 @@ h2 {
 .team > .container, .exec> .container{
     text-align: center;
     margin-bottom: 7vh;
-}
-
-p {
-    font-size: 11px;
-    margin-bottom: 0;
-    color: white;
-    font-style: italic;
 }
 
 .name {
@@ -144,9 +154,6 @@ a.projects {
     border-color: $gray;
 }
 
-.black {
-    color: black;
-}
 .img-container {
     height: 100%;
     width: 100%;
