--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,6 +49,10 @@ a:hover {
           transition-timing-function: ease-in;
 }
 
+.navbar a:hover {
+  opacity: 0.5;
+}
+
 nav {
   font-weight: 500;
 }
@@ -61,6 +65,32 @@ nav {
 
 .nav-link.active {
   font-weight: 700;
+}
+
+a.about {
+  border-bottom: solid #99CC99;
+}
+
+a.members {
+  border-bottom: solid #99CCFF;
+}
+
+a.projects {
+  border-bottom: solid #E06B65;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  padding-left: 0;
+  margin-left: 0.5em;
+  padding-right: 0;
+  margin-right: 0.5em;
+  padding-bottom: 0.1em;
+  margin-bottom: 0.4em;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #787878;
+  border-color: #787878;
 }
 
 .jumptarget::before {
