--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -57,6 +57,10 @@ a:hover {
     transition-timing-function: ease-in;
 }
 
+.navbar a:hover {
+    opacity: 0.5;
+}
+
 // .container {
 //     padding-top: 2em;
 //     padding-bottom: 2em;
@@ -73,6 +77,32 @@ nav {
 
 .nav-link.active {
     font-weight: 700;
+}
+
+a.about {
+    border-bottom: solid $green;
+}
+
+a.members {
+    border-bottom: solid $blue;
+}
+
+a.projects {
+    border-bottom: solid $red;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    padding-left: 0;
+    margin-left: 0.5em;
+    padding-right: 0;
+    margin-right: 0.5em;
+    padding-bottom: 0.1em;
+    margin-bottom: 0.4em;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+    color: $gray;
+    border-color: $gray;
 }
 
 .jumptarget::before {
