--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -25,7 +25,7 @@ p {
     color: white;
     text-align: center;
     font-style: italic;
-    margin-bottom: 10vh;
+    margin-bottom: 3vh;
 }
 
 p.header {
@@ -52,7 +52,7 @@ h2 {
     font-style: normal;
     font-size: 25;
     font-weight: bold;
-    margin-bottom: 7vh;
+    margin-bottom: 1vh;
 }
   
 .dot {
@@ -63,8 +63,8 @@ h2 {
     display: inline-block;
     position: relative;
     text-align: center;
-    min-height: 100px;
-    min-width: 100px;
+    min-height: 120px;
+    min-width: 120px;
 }
 .quote {
     position: absolute;
@@ -79,7 +79,7 @@ h2 {
 
 .team > .container, .exec> .container{
     text-align: center;
-    margin-bottom: 7vh;
+    margin-bottom: 1vh;
 }
 
 .name {
@@ -153,6 +153,15 @@ a {
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+    }
+    .header {
+        margin-bottom: 5vh;
+    }
+    h2 {
+        margin-bottom: 5vh;
+    }
+    .team > .container, .exec> .container{
+        margin-bottom: 5vh;
     }
     a.about {
         border-bottom: solid $green;
