--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0px;
   padding: 0px;
@@ -12,6 +11,7 @@ html {
 
 body {
   font-family: 'Montserrat', sans-serif;
+  background-image: url(../assets/img/about/gradient+clouds.png);
 }
 
 h1 {
@@ -23,8 +23,6 @@ h1 {
 
 h2 {
   text-align: left;
-  padding-top: 4rem;
-  padding-bottom: 2rem;
 }
 
 h4 {
@@ -36,11 +34,13 @@ h4 {
 
 h6 {
   text-align: center;
-  max-width: 400px;
+  max-width: 25em;
   margin: auto;
+  padding-bottom: 5em;
   color: black;
   font-weight: 100;
   font-style: italic;
+
 }
 
 #values {
@@ -56,7 +56,7 @@ h6 {
 }
 
 .column2 {
-  float: left;
+  float: right;
   width: 50%;
   text-align: justify;
   text-justify: inter-word;
@@ -67,30 +67,10 @@ h6 {
   clear: both;
 }
 
-p {
-
-}
-
-#aboutpic1 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  height: 60vh;
-}
-
-#aboutpic2 {
-  margin-top: 10px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  height: 60vh;
-}
-
+#aboutpic1,
+#aboutpic2,
 #aboutpic3 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  height: 60vh;
+  width: 30em;
 }
 
 figcaption {
@@ -99,7 +79,8 @@ figcaption {
   font-weight: 1;
   color: gray;
   font-size: 15px;
-}
+  max-width: 30em;
+  margin: auto;
 }
 
 /*# sourceMappingURL=about.css.map */
